tests/mm0_mmu/fail/bad-sort6.mmu
(sort s12 provable strict sort)